修改适配JDK8的参数。